# language

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  docker-compose.yml
.github/workflows/: build-action.yml  continuous-integration.yml
Documentation/: Readme.md
Documentation/BytecodeTools/: Assembler.md  README.md
Documentation/VirtualMachine/: DataTypes.md  Flags.md  Memory.md  Opcodes.md  Readme.md  Registers.md
Meta/: Build.sh  Clean.sh  Common.sh  Format.sh  Get-Lines.sh  Rebuild.sh  Runtest.sh  Setup-Test-Environment.sh  build.sh  clean.sh  common.sh
Meta/Docker/: Clean.sh  Connect.sh  Dockerfile  EnvironmentSetup.sh
Source/: CMakeLists.txt
Source/Common/: CMakeLists.txt
Source/Common/Include/: input.h  output.h
Source/Common/Source/: input.cc  output.cc
Source/Tools/: CMakeLists.txt
Source/Tools/Assembly/: CMakeLists.txt
Source/Tools/Assembly/Include/: backend.h  intermediate.h  parser.h
Source/Tools/Assembly/Source/: backend.cc  intermediate.cc  parser.cc
Source/Tools/lizas/: CMakeLists.txt  main.cc
Source/Tools/lizas/Include/: parse_asm.h
Source/Tools/lizas/Source/: main.cc  parse_asm.cc
Source/Tools/lizdis/: CMakeLists.txt
Source/Tools/lizvm/: CMakeLists.txt  main.cc
Source/VM/: CMakeLists.txt
Source/VM/DataTypes/: CMakeLists.txt
Source/VM/DataTypes/Include/: atom.h  base_type.h  nil.h  number.h
Source/VM/DataTypes/Source/: atom.cc  base_type.cc  nil.cc  number.cc
Source/VM/Include/: config.h  instruction.h  machine.h  opcode.h  operand.h  registers.h  types.h
Source/VM/Memory/: CMakeLists.txt
Source/VM/Memory/Include/: address.h  memory.h  stack.h
Source/VM/Memory/Source/: address.cc  heap.cc  memory.cc  stack.cc
Source/VM/Source/: instruction.cc  machine.cc  opcode.cc  operand.cc  registers.cc
Source/backend/include/: opcode.h
Tests/: CMakeLists.txt
Tests/Data/Assembler/Etc/: strings.lizasm
Tests/Data/Assembler/Examples/: 01-add-two-numbers.lizasm
Tests/Data/Assembler/InstructionCombinations/: memory.lizasm  strings.lizasm
Tests/Data/Assembler/Instructions/: add.lizasm  allocate.lizasm  imut.lizasm  mut.lizasm  print_int.lizasm  print_str.lizasm  printstr.lizasm  push_number.lizasm  put_character.lizasm  set_type.lizasm
Tests/Source/: initial_vm.test.cc
Tests/Tools/: CMakeLists.txt
Tests/Tools/Assembly/: CMakeLists.txt
Tests/Tools/Assembly/Source/: parse_instructions.test.cc
Tests/Tools/Source/: parse_instructions.test.cc
Tests/VM/: CMakeLists.txt
Tests/VM/DataTypes/: CMakeLists.txt  atom.test.cc  base_type.test.cc  nil.test.cc  number.test.cc
Tests/VM/Instructions/: imut.lizasm
Tests/VM/Memory/: CMakeLists.txt
Tests/VM/Memory/Source/: address.test.cc  memory.test.cc
Tests/VM/Source/: memory.test.cc  opcode.test.cc  opcodes.test.cc  registers.test.cc  types.test.cc
Tests/vm/assembly/: 01-add-two-numbers.lizasm
